forms done, new design, all works

--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -1,13 +1,47 @@
 {% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}HIUSMAGIA - Change Password{% endblock %}
+{% block title %}HIUSMAGIA - Vaihda salasana{% endblock %}
 
 {% block content %}
-<div class="page-header">
-    <h1>Change Your Password</h1>
-</div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-</div>
+<div class="custom-margin-for-form">
+    <!--Row starts-->
+    <div class="row">
+        <div class="col-lg-2">        
+        </div>
+        
+        <div class="col-lg-8">            
+            
+            <form class="custom-form" action="" method="post">
+                <h2>VAIHDA SALASANA</h2>
+
+                <div class="form-group">                    
+                    {{ form.old_password.label }}                    
+                    {{ form.old_password(class="form-control") }}                    
+                </div>
+
+                <div class="form-group">                    
+                    {{ form.password.label }}                    
+                    {{ form.password(class="form-control") }}                    
+                </div>
+
+                <div class="form-group">                    
+                    {{ form.password2.label }}                    
+                    {{ form.password2(class="form-control") }}                    
+                </div>
+               
+                <p></p>
+                
+                {{ form.submit( class="btn btn-lg btn-block custom-outline-button" ) }}
+                <p></p>
+                {{ form.csrf_token }}
+               
+            </form>
+        </div>   
+        
+        <div class="col-lg-2">        
+        </div>
+    </div>
+    <!--Row ends--> 
+</div> 
 {% endblock %}
