--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,22 +5,15 @@ HIUSMAGIA parturi kampaamo
 {% block content %}
     <div class="custom-adds">
         <div class="row">
-        <div class="col-xl-8">
-            <h2 style="color:#336699;"><b>KUNTOKLUBIN ENERGIA</b> KUUKAUDEN HUIPPUTARJOUKSIA!</h2>
-            <p></p>
-            <p>
-                <span class="custom-txt-strong" style="text-transform:uppercase;">Osta nyt kuukauden kausikortti ja saa ilmaiseksi 1 tunti personal trainerin kanssa!</span><br>
-                Etu on tarkoitettu uusille asiakkaille. Sopimus jatkuu tämän jälkeen toistaiseksi voimassa olevana. Tarjous voimassa rajoitetun ajan. 
-                
-                Meidän tilava harjoitteluympäristö antaa sinulle mahdollisuuden monipuoliseen liikunnan harrastamiseen. 
-                <span class="custom-txt-strong" style="text-transform:uppercase;">Hanki kausikortti kätevästi netistä ja tule tutustumaan!</span> 
-            </p>       
-        </div> 
-
-        <div class="col-xl-4">
-            <div class="custom-div-adds"><span class="custom-span-adds">UUSILLE ASIAKKAILLE<br></span><h1>1 ILMAINEN TUNTI</h1><span class="custom-span-adds-red">PERSONAL TRAINERIN<br></span><span class="custom-span-adds">KANSSA <i class="bi bi-tag-fill"></i></span>
-            </div>
-        </div> 
+        <div class="col-xl-12 custom-txt-center">
+            <!--<h2 style="color:white; font-family: 'Train One', cursive; font-size: 230%;"><b>TERAPIA ON KALLISTA</b></h2>
+            <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 230%;"><b>SAA HIUSTENLEIKKAUS SEN SIJAAN</b></h2>
+            <h2 style="color:white; font-family: 'Train One', cursive; font-size: 230%;"><b>OLEMME HIENOJA KUUNTELIJOITA</b></h2>-->  
+            
+            <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 230%;"><b>TERAPIA ON KALLISTA</b></h2>
+            <h2 style="color:white; font-family: 'Train One', cursive; font-size: 210%;"><b>SAA HIUSTENLEIKKAUS SEN SIJAAN</b></h2>
+            <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 230%;"><b>OLEMME HIENOJA KUUNTELIJOITA</b></h2>  
+        </div>         
         </div>     
     </div>      
 
@@ -28,11 +21,11 @@ HIUSMAGIA parturi kampaamo
     <div class="row">
         <div class="col-xl-6">
             <div class="row">
-                <div class="col-xl-7 custom-cart-title-l" ><div class="custom-cart-title-wrap">Pilates</div></div>
-                <div class="col-xl-5 custom-cart-title-r" ><a href="" class="custom-cart">OSTAA</a></div>
+                <div class="col-xl-7 custom-cart-title-l" ><div class="custom-cart-title-wrap">Shampoot</div></div>
+                <div class="col-xl-5 custom-cart-title-r" ><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/pilates.jpeg/') }}" alt=""> 
-                    <div class="custom-top-right"><h3>60€/kk</h3></div> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt=""> 
+                    <div class="custom-top-right"><h3>alk.20€</h3></div> 
                                             
                     <div class="custom-overlay">                   
                         <div class="custom-image-text">
@@ -45,11 +38,11 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col-xl-6">
             <div class="row">
-                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Jooga</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hoitoaineet</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/jooga.jpeg/') }}" alt=""> 
-                    <div class="custom-top-right"><h3>30€/kk</h3></div>
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt=""> 
+                    <div class="custom-top-right"><h3>alk.15€</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
                         Joogaan kuuluu asentoharjoituksia ja meditaatiota, 
@@ -65,11 +58,11 @@ HIUSMAGIA parturi kampaamo
     <div class="row">
         <div class="col-xl-6">
             <div class="row">
-                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Personal trainer</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Muotoilutuotteet</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/ohjaaja.jpg/') }}" alt="">
-                    <div class="custom-top-right"><h3>30€/t</h3></div> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt="">
+                    <div class="custom-top-right"><h3>alk.30€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
                         Kun haluat suunnitelmallista ja yksilöllistä ohjausta, ammattitaitoinen ja 
@@ -80,11 +73,11 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col-xl-6">
             <div class="row">
-                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hieronta</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hiusvärit</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/hieronta.jpeg/') }}" alt=""> 
-                    <div class="custom-top-right"><h3>25€/t</h3></div>
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt=""> 
+                    <div class="custom-top-right"><h3>alk.25€</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
                         Tarjoamme laadukkaita hierontapalveluita. Hieronta tehostaa aineenvaihduntaa 
@@ -100,11 +93,11 @@ HIUSMAGIA parturi kampaamo
     <div class="row">
         <div class="col-xl-6">
             <div class="row">
-                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Zumba</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Permanenttiaineet</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/zumba.jpeg/') }}" alt="">
-                    <div class="custom-top-right"><h3>60€/kk</h3></div> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt="">
+                    <div class="custom-top-right"><h3>alk.20€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
                         Zumba on aerobicinen fitness-ohjelma, jonka musiikki perustuu pääosin latinalaistansseihin.
@@ -115,11 +108,11 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col-xl-6">
             <div class="row">
-                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Kausikortti</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Tarvikkeet</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/kausikortti.jpeg/') }}" alt="">
-                    <div class="custom-top-right"><h3>90€/kk</h3></div> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt="">
+                    <div class="custom-top-right"><h3>alk.10€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
                         Kausikortilla pääset treenaamaan kaikissa meidän saleissa ja liikuntaryhmissä rajattomasti.
