--- a/app/templates/admins/admin_page.html
+++ b/app/templates/admins/admin_page.html
@@ -45,10 +45,16 @@ die;
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
-                            <h6 class="my-0"><a href="{{ url_for('main.new_change_workout') }}" class="text-danger">Lisää uusi palvelu</a></h6>
+                            <h6 class="my-0"><a href="{{ url_for('main.new_service') }}" class="text-danger">Lisää uusi palvelu</a></h6>
                             <small class="text-muted">Lisää tietoa uudesta palvelusta aikatauluun</small>
                         </div>                    
                         </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="my-0"><a href="{{ url_for('main.reservation_admin') }}" class="text-danger">Näytä varaukset</a></h6>
+                                <small class="text-muted">***********</small>
+                            </div>                    
+                            </li>
 
                         <!--<li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
@@ -90,14 +96,13 @@ die;
 
                                 <div class="form-group justify-content-center col-md-6 mb-4">
                                     <!--<label class="mr-4">Liikuntalaji</label>-->
-                                    {{ form.service_titles.label }}
-                                    {{ form.service_titles(id="title", class="form-control mr-5") }}
+                                    {{ form.service.label }}
+                                    {{ form.service(id="service", class="form-control mr-5") }}
                                     <!--php starts-->
                                     <!-- <?php
                                     $titles = [];
                                     $query = "SELECT title,id FROM workout_titles ORDER BY title";
                                     $result = $connect->query($query);
-
                                     if ($result->num_rows > 0) {
                                         while ($row = $result->fetch_assoc()) {
                                                 $titles[$row['id']] = $row["title"];
@@ -127,7 +132,6 @@ die;
                                     $titles = [];
                                     $query = "SELECT `name`,id FROM users WHERE trainer='1' ORDER BY `name`";
                                     $result = $connect->query($query);
-
                                     if ($result->num_rows > 0) {
                                         while ($row = $result->fetch_assoc()) {
                                             $trainers[$row['id']] = $row["name"];
@@ -154,7 +158,7 @@ die;
                                 </div>-->
 
                                 <div class="form-group justify-content-center col-md-12 mb-4">
-                                    {{ form.submit( class="btn btn-block mt-0 custom-green-buy", id="find_workouts" ) }}    
+                                    {{ form.submit( class="btn btn-block mt-0 custom-green-buy", id="find_services" ) }}    
                                     <button type="reset" name="submit" id="" class="btn btn-block mt-2 custom-outline-button">Nollaa kaikki kentät</button> 
                                 </div>                                
                             
@@ -194,7 +198,7 @@ die;
                                     </tr>  -->                                  
                                 </thead>
 
-                                <tbody id="workouts_all">
+                                <tbody id="services_all">
                                 </tbody>         
                             </table>           
                         </div>
@@ -204,6 +208,7 @@ die;
         </div>
     </div>
     <!--Row ends-->
+    <script type="text/javascript" src="{{ url_for('static', filename='/js/services_available_admin.js') }}"></script>
 {% endblock %}
 
 <script type="text/javascript" src="admin_workouts_select.js"></script>
