--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -1,13 +1,39 @@
 {% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}HIUSMAGIA - Change Email Address{% endblock %}
+{% block title %}HIUSMAGIA - Vaihda sähköposti{% endblock %}
 
 {% block content %}
-<div class="page-header">
-    <h1>Change Your Email Address</h1>
-</div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-</div>
+    <!--Row starts-->
+    <div class="row custom-margin-for-form">
+        <div class="col-lg-2">        
+        </div>
+                
+        <div class="col-lg-8">
+            
+            <form class="custom-form" action="" method="post">
+                <h2>VAIHDA SÄHKÖPOSTI</h2>               
+
+                <div class="form-group">                    
+                    {{ form.email.label }}                    
+                    {{ form.email(class="form-control") }}
+                </div>
+                
+                <div class="form-group">                   
+                    {{ form.password.label }}                    
+                    {{ form.password(class="form-control") }}                    
+                </div>
+                
+                <p></p>
+               
+                {{ form.submit( class="btn btn-lg btn-block custom-outline-button" ) }}
+                <p></p>
+                {{ form.csrf_token }}                
+            </form>
+        </div>   
+        
+        <div class="col-lg-2">        
+        </div>
+    </div>
+    <!--Row ends--> 
 {% endblock %}
