--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,22 +1,54 @@
 {% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}
-HIUSMAGIA Luo tili
-{% endblock %}
+
+{% block title %}HIUSMAGIA - Luo tili{% endblock %}
 
 {% block content %}
 <div class="custom-margin-for-form">
     <!--Row starts-->
     <div class="row">
-        <div class="col-lg-4">        
+        <div class="col-lg-2">        
         </div>
+                
+        <div class="col-lg-8">
+            
+            <form class="custom-form" action="" method="post">
+                <h2>LUO TILI</h2>               
 
-        <div class="col-lg-4">
-            <h2>LUO TILI</h2>
-            {{ wtf.quick_form(form) }}    
-        </div>
+                <div class="form-group">                    
+                    {{ form.email.label }}                    
+                    {{ form.email(class="form-control") }}
+                </div>
 
-        <div class="col-lg-4">        
+                <div class="form-group">                    
+                    {{ form.username.label }}                    
+                    {{ form.username(class="form-control") }}
+                </div>
+
+                <div class="form-group">                    
+                    {{ form.phone_number.label }}                    
+                    {{ form.phone_number(class="form-control") }}
+                </div>
+
+                <div class="form-group">                   
+                    {{ form.password.label }}                    
+                    {{ form.password(class="form-control") }}                    
+                </div>
+
+                <div class="form-group">                   
+                    {{ form.password2.label }}                    
+                    {{ form.password2(class="form-control") }}                    
+                </div>             
+
+                <p></p>
+               
+                {{ form.submit( class="btn btn-lg btn-block custom-outline-button" ) }}
+                <p></p>
+                {{ form.csrf_token }}                
+            </form>
+        </div>   
+        
+        <div class="col-lg-2">        
         </div>
     </div>
     <!--Row ends--> 
