--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -1,13 +1,36 @@
 {% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}HIUSMAGIA - Password Reset{% endblock %}
+{% block title %}HIUSMAGIA - Nollaa salasana{% endblock %}
 
 {% block content %}
-<div class="page-header">
-    <h1>Reset Your Password</h1>
-</div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-</div>
+<div class="custom-margin-for-form">
+    <!--Row starts-->
+    <div class="row">
+        <div class="col-lg-2">        
+        </div>
+                
+        <div class="col-lg-8">
+            
+            <form class="custom-form" action="" method="post">
+                <h2>NOLLAA SALASANA</h2>               
+
+                <div class="form-group">                    
+                    {{ form.email.label }}                    
+                    {{ form.email(class="form-control") }}
+                </div>
+
+                <p></p>
+               
+                {{ form.submit( class="btn btn-lg btn-block custom-outline-button" ) }}
+                <p></p>
+                {{ form.csrf_token }}                
+            </form>
+        </div>   
+        
+        <div class="col-lg-2">        
+        </div>
+    </div>
+    <!--Row ends--> 
+</div> 
 {% endblock %}
