--- a/app/templates/company/company.html
+++ b/app/templates/company/company.html
@@ -9,7 +9,7 @@ HIUSMAGIA parturi kampaamo
         </div>
 
         <div class="col-lg-8"> 
-            <h2 class="custom-txt-center">TIETOA MEISTÄ</h2>
+            <h1 class="custom-txt-center">TIETOA MEISTÄ</h1>
             <p></p>
 
             <p>
@@ -19,7 +19,71 @@ HIUSMAGIA parturi kampaamo
                 Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Quisque vitae pharetra dolor. 
                 Nulla fermentum odio lorem, tincidunt tempor tortor egestas eu. Donec ac egestas elit. 
                 Nam maximus sapien fermentum sapien consectetur ultricies. Nulla consequat nec orci at finibus.
-            </p>   
+            </p>
+            
+            <!--<div class="row">
+                <div class="col-sm-1" style="background:lightgreen;">1</div>
+                <div class="col-sm-1" style="background:lightblue;">2</div>
+                <div class="col-sm-1" style="background:lightgreen;">1</div>
+                <div class="col-sm-1" style="background:lightblue;">2</div>
+                <div class="col-sm-1" style="background:lightgreen;">1</div>
+                <div class="col-sm-1" style="background:lightblue;">2</div>
+                <div class="col-sm-1" style="background:lightgreen;">1</div>
+                <div class="col-sm-1" style="background:lightblue;">2</div>
+                <div class="col-sm-1" style="background:lightgreen;">1</div>
+                <div class="col-sm-1" style="background:lightblue;">2</div>
+                <div class="col-sm-1" style="background:lightgreen;">1</div>
+                <div class="col-sm-1" style="background:lightblue;">2</div>
+            </div>
+            <p></p>-->
+
+            <h2 style="text-align: center; color: #C70039;">MEIDÄN YSTÄVÄLLISET JA AMMATTITAITOISET OSAAJAT</h2>
+            <p></p>
+
+            <!--Row starts-->
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+                <div class="col custom-margin-bottom">
+                    <div class="card h-100 custom-card">
+                    <img src="{{ url_for('static', filename='/pics/emma.jpg/') }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Emma Savolainen</h5>
+                        <p class="card-text">Leikkaukset on hänen intohimonsa.</p> 
+                        <!--<p class="card-text">Luo ilmainen tili ja tee ajanvaraukset online.</p>-->                       
+                    </div>
+                    </div>
+                </div>
+                <div class="col custom-margin-bottom">
+                    <div class="card h-100 custom-card">
+                    <img src="{{ url_for('static', filename='/pics/tiina.jpg/') }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tiina Ahonen</h5>
+                        <p class="card-text">Värjäyksen mestari. Väsymätön perfektionisti.</p> 
+                        <!--<p class="card-text">Luo ilmainen tili ja tee ajanvaraukset online.</p>-->                        
+                    </div>
+                    </div>
+                </div>
+                <div class="col custom-margin-bottom">
+                    <div class="card h-100 custom-card">
+                    <img src="{{ url_for('static', filename='/pics/aila.jpg/') }}" class="card-img-top" alt="..."> 
+                    <div class="card-body">
+                        <h5 class="card-title">Aila Lampola</h5>
+                        <p class="card-text">Tekee helposti maailman kauneimmat meikit!</p> 
+                        <!--<p class="card-text">Luo ilmainen tili ja tee ajanvaraukset online.</p>-->                        
+                    </div>
+                    </div>
+                </div>
+                <div class="col custom-margin-bottom">
+                    <div class="card h-100 custom-card">
+                    <img src="{{ url_for('static', filename='/pics/laura.jpg/') }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Laura Tielinen</h5>
+                        <p class="card-text">Meidän tyylikas ja ahkera manikyyri mestari.</p>
+                        <!--<p class="card-text">Luo ilmainen tili ja tee ajanvaraukset online.</p>-->                         
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <!--Row ends-->
             
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. 
@@ -41,7 +105,7 @@ HIUSMAGIA parturi kampaamo
 
             <div class="row">
                 <div class="col-xl-4">
-                    <h4>KUNTOSALIN OSOITE</h4>
+                    <h4>MEIDÄN OSOITE</h4>
 
                     <p>
                     <span class="custom-txt-strong">Helsinki</span><br>
@@ -49,7 +113,7 @@ HIUSMAGIA parturi kampaamo
                     00100 Helsinki
                     </p> 
 
-                    <h4>MEIDÄN AUKIOLOAJAT</h4>
+                    <h4>AUKIOLOAJAT</h4>
 
                     <p>
                     <span class="custom-txt-strong">ma - pe:</span> 08:00-22:00<br>
@@ -66,7 +130,7 @@ HIUSMAGIA parturi kampaamo
                 </div> 
 
                 <div class="col-xl-8">
-                    <div style="width: 100%"><iframe width="100%" height="270" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+                    <div class="custom-background" style="width: 100%;"><iframe width="100%" height="270" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
                     src="https://maps.google.com/maps?width=600&amp;height=300&amp;hl=en&amp;q=Helsinki,%20Finland+(Energia)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
                     </div>
                         <p></p>             
