--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -83,19 +83,20 @@ if (isset($_COOKIE['user_id'])) {
             </a>
           </div>
             
-          <div class="navbar-nav">
+          <div class="navbar-nav">                   
             <a href="{{ url_for('main.admin_page') }}" class="nav-item nav-link">
-              <i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
-            </a>
-
+              <i class="bi bi-person-circle" style="font-size:18px; color:#FBEFE1;"></i>
+            </a>                       
+            
             {% if current_user.is_authenticated %}  
             <a  href="cart/cart.html" 
-              class="nav-item custom-cart-link"><i class="bi bi-cart"></i>
+              class="nav-item nav-link"><i class="bi bi-cart"></i>
+              <!--class="nav-item custom-cart-link"><i class="bi bi-cart"></i>-->
             </a>           
             
             <div class="nav-item dropdown">
               <a href="{{ url_for('main.client_page') }}" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">
-                <i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
+                <i class="bi bi-person-circle" style="font-size:18px; color:#DAF7A6;"></i>
               </a>
               <div class="dropdown-menu"> 
                   <a href="{{ url_for('main.client_page') }}" class="dropdown-item">Minun aikatauluni</a>
@@ -108,7 +109,7 @@ if (isset($_COOKIE['user_id'])) {
             <a  
                 href="{{ url_for('auth.logout') }}" 
                 class="nav-item nav-link">Kirjaudu ulos
-            </a>
+            </a>            
 
             {% else %}              
 
@@ -155,7 +156,7 @@ if (isset($_COOKIE['user_id'])) {
     <footer class="custom-footer">
       <div class="container-fluid">
           <div class="custom-padding">
-              <p class="text-light">Copyright &copy; 2020-<?php echo date("Y");?> ENERGIA kuntoklubi</p> 
+              <p class="text-light">Copyright &copy; 2020-<?php echo date("Y");?> HIUSMAGIA parturi-kampaamo</p> 
           </div>   
       </div>
     </footer>
